--- a/.github/workflows/upstream.yml
+++ b/.github/workflows/upstream.yml
@@ -1,4 +1,4 @@
-name: Create upstream pull request
+name: Create upstream merge or Pull Request
 on:
   pull_request:
     branches:
@@ -7,7 +7,7 @@ on:
 
 jobs:
   generate-matrix:
-    name: Generate matrix for merge action of ${{  github.head_ref }}
+    name: Generate matrix for PR or merge action of ${{  github.head_ref }}
     if: github.event.pull_request.merged == true && !contains(github.event.pull_request.labels.*.name, 'temporary')
     runs-on: ubuntu-latest
     outputs:
@@ -44,7 +44,7 @@ jobs:
           from_branch: ${{  github.head_ref }}
           target_branch: ${{ matrix.upstream_release }}
           github_token: ${{ secrets.GITHUB_TOKEN }}
-      - name: pull-request
+      - name: pull-request ${{  github.head_ref }} to Upstream Release "${{ matrix.upstream_release }}"
         if:   ${{ failure() }}
         uses: repo-sync/pull-request@v2
         with:
@@ -73,7 +73,7 @@ jobs:
           from_branch: ${{  github.head_ref }}
           target_branch: develop
           github_token: ${{ secrets.GITHUB_TOKEN }}
-      - name: pull-request
+      - name: pull-request ${{  github.head_ref }} to develop"
         if:   ${{ failure() }}
         uses: repo-sync/pull-request@v2
         with:
