--- a/package.json
+++ b/package.json
@@ -1,4 +1,9 @@
 {
   "name": "SpinBikes",
-  "version": "2.23.1"
+  "version": "2.23.1",
+  "dependencies": {
+    "node-fetch": "^2.6.1",
+    "promisify": "0.0.3",
+    "util": "^0.12.3"
+  }
 }
