--- a/.github/workflows/releaser.yml
+++ b/.github/workflows/releaser.yml
@@ -18,5 +18,5 @@ jobs:
         PERSONAL_ACCESS_TOKEN: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
         PUSH_GITHUB_USER: ${{ secrets.PUSH_GITHUB_USER }}
       run: |
-        npm install node-fetch util promisify
+        npm install node-fetch util promisify inquirer
         node scripts/releaser.js
